--- a/gilhari_service.config
+++ b/gilhari_service.config
@@ -3,7 +3,7 @@
 "db_username": "anand",
 "db_password": "!Anand123",
 "jdx_debug_level": 3,
-"jdx_force_create_schema": "true",
+"jdx_force_create_schema": "false",
 "jdx_persistent_classes_location": "./bin",
 "classnames_map_file": "config/classnames_map_example.js",
 "gilhari_rest_server_port": 8081
